spacing image issues

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -132,11 +132,11 @@ blockquote {
 }
 
 .item img {
-padding-top: 25px;
+padding-top: 50px;
 }
 
 .item.stickers img {
-  padding-top: 40px;
+  padding-top: 80px;
 }
 /* my pic */
 main {
